--- a/Maersk.Sorting.Api/Maersk.Sorting.Api.csproj
+++ b/Maersk.Sorting.Api/Maersk.Sorting.Api.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.12.3" />
   </ItemGroup>
 
 
