Implementing BackgroundService to process jobs in the background.

--- a/Maersk.Sorting.Api/appsettings.json
+++ b/Maersk.Sorting.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "JobConnectionString": "mongodb+srv://Swaroop:swarooppass@maerskcluster.uqkz3.mongodb.net?retryWrites=true&w=majority"
+  },
   "AllowedHosts": "*"
 }
